Fix: Sponsor cards correctly aligned center && loading screen delay is fixed

--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -20,7 +20,7 @@
 .hourglass {
   position: absolute;
   z-index: 2;
-  top: 20%;
+  top: 24%;
   animation: rotateHourglass 3s linear infinite;
   transform-origin: center;
 }
